--- a/src/components/AboutBuraq/aboutBuraq.scss
+++ b/src/components/AboutBuraq/aboutBuraq.scss
@@ -1,7 +1,7 @@
 @import "./../../styles/variables";
 
 .about-buraq-wrap {
-  padding: 0px 0px 70px;
+  padding: 0px 0px 50px;
   //background-color: #111;
   color: #FFFFFF;
   font-family: Arial, sans-serif;
@@ -44,7 +44,7 @@
       // font-size  : 30px;
       line-height: 45px;
       font-weight: 900;
-      color: #333333;
+      color: #000;
 
       @media #{$xsm} {
 
@@ -96,7 +96,7 @@
   }
 
   .rozella-row {
-    padding: 50px 0px;
+    padding: 50px 0px 0px 0px;
   }
 
   .rozella-btn2::before {
@@ -133,7 +133,7 @@
 
 .about-text-detail {
   font-size: 16px;
-  color: #333333;
+  color: #000;
 }
 
 .about-arabic-text {
@@ -189,7 +189,7 @@
 
 @media (max-width: 1000px) {
   .about-buraq-wrap .rozella-btn2 {
-    height: 70px !important;
+    // height: 70px !important;
   }
 }
 
@@ -198,7 +198,7 @@
     text-align: center;
   }
 
-  .rozella-heading {
+  .rozella-wing-wrape {
     margin-top: 2rem;
   }
 
