--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -3,39 +3,45 @@
 .language-option-list {
   color: #fff !important;
 }
+
 .item-list-wrap {
   color: #000 !important;
 }
+
 .popup-small-screen {
   @media #{$sm} {
     left: 55%;
     top: 68%;
   }
+
   @media #{$md} {
     left: 75%;
     top: 68%;
   }
 }
+
 .language-toggle-list {
   color: #2e3751 !important;
   display: none;
+
   @media #{$sm} {
     display: block;
   }
+
   @media #{$md} {
     display: block;
   }
 }
 
 
-.navbar{
+.navbar {
 
   @media #{$xsm} {
     background: #2e3751 !important;
   }
 
-  .page-scroll{
-    @media #{$xsm}{
+  .page-scroll {
+    @media #{$xsm} {
       display: none;
     }
   }
@@ -71,10 +77,10 @@
 }
 
 @media (max-width: 1024px) {
-  
+
   .navbar {
-    background: #333333 !important;
-    border-bottom: 1px solid #333333;
+    background: #1b1b1b !important;
+    border-bottom: 1px solid #1b1b1b;
     padding: 1.5rem 1rem;
   }
 
@@ -83,17 +89,17 @@
   }
 
   .navbar-brand {
-  
+
     img {
       height: auto !important;
       width: auto !important;
     }
-  
+
     .buhen-logo {
       margin: auto auto;
       margin-right: 10px;
     }
-  
+
     .buhen-logo-name {
       font-size: 26px;
       color: #FFFFFF;
@@ -111,17 +117,17 @@
   .navbar-brand {
 
     width: auto !important;
-  
+
     img {
       height: 45px !important;
       // width: 26px !important;
     }
-  
+
     .buhen-logo {
       margin: auto auto;
       margin-right: 10px;
     }
-  
+
     .buhen-logo-name {
       font-size: 20px;
       color: #FFFFFF;
