--- a/src/components/HeroSection/HerroSection2.scss
+++ b/src/components/HeroSection/HerroSection2.scss
@@ -40,6 +40,9 @@
     background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), linear-gradient(180deg, rgba(1, 5, 45, 0.59) 0%, rgba(255, 255, 255, 0) 69.11%), url("../../assets/Images/LandingPage/Top-Section-Background.jpg");
     transform: matrix(-1, 0, 0, 1, 0, 0);
     position: absolute;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
     content: "";
     animation: zoom-in-zoom-out 4s ease-out infinite;
     width: 100%;
@@ -287,11 +290,11 @@ p.lead {
 }
 
 .hero_banner_button {
-  background-color: #333333;
+  background-color: #000;
   border-radius: 0;
   text-transform: uppercase;
   ;
-  border-color: #333333;
+  border-color: #000;
   ;
 }
 
