--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ body {
   font-family: Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #36454F;
 }
 
 code {
@@ -15,8 +16,8 @@ code {
 }
 
 .custom-nav.affix {
-   
-  background: #1b1b1b !important;
-  border-bottom: 1px solid #333333 !important;
+
+  background: #000 !important;
+  border-bottom: 1px solid #000 !important;
 
 }
